Add front style

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -60,9 +60,6 @@ img.page-scroll.navbar-header{
 				}
 }
 
-.icon-coeur-_full:before {
-  content: "\e900";
-}
 
 .navbar-default .navbar-header .navbar-brand {
 color: #2DAF94;
@@ -73,7 +70,8 @@ margin-left: auto;
         color: #33acb7;
 
       }
-}
+    }
+
 
 .img-responsive{
   display: block;
@@ -121,11 +119,7 @@ margin-left: auto;
         border-color: transparent;
       }
 
-      @media (max-width: 768px){
-      .navbar-header {
-          float: right;
-      }
-    }
+
 
     section.features .section-heading {
     margin-bottom: 0px;
@@ -336,4 +330,11 @@ margin-left: auto;
 }
 .text-muted_frineds{
 color:#fff;
+}
+
+@media (max-width: 768px){
+.navbar-default .navbar-header .navbar-brand {
+  margin-left: 40px;
+  margin-top: -50px;
+}
 }
