--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -100,6 +100,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
+                      <h1>hello<h1>
                         <h2><%= t "features.title" %></h2>
                         <p class="text-muted"><%= t "features.title_under_1"%><br><%= t "features.title_under_2"%></p>
                         <hr>
