change some styling hopen_box

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -94,6 +94,10 @@ margin-left: auto;
     border-radius: 3px;
     text-align: center;
     }
+    .text-muted_hopen_box{
+      text-align: center;
+      color: #777;
+    }
 /////////page_download/////
 .img_download{
   border-radius: 8px;
