--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -170,13 +170,18 @@
 
     <section id="hopen_box">
       <h2 class="title_hopen"><%= t"hopen_box.title" %></h2>
+      <p class="text-muted_hopen_box"><%= t"hopen_box.title_under_3"%>
+      <br><%= t"hopen_box.title_under_4"%></p>
+      <hr>
       <div class='principal'>
         <div class="element">
           <div class="screen">
             <%= image_tag "family2.png"%>
           </div>
           <h3><%= t "hopen_box.title_1"%></h3>
-          <p><%= t "hopen_box.description_1"%></p>
+          <p><%= t "hopen_box.description_1"%>
+          <br><%= t "hopen_box.description_6"%>
+          <br><%= t "hopen_box.description_7"%></p>
         </div>
 
         <div class="element">
@@ -184,7 +189,9 @@
             <%= image_tag "hopen.png"%>
           </div>
           <h3><%= t "hopen_box.title_2"%></h3>
-          <p><%= t "hopen_box.description_2"%></p>
+          <p><%= t "hopen_box.description_2"%>
+          <br><%= t "hopen_box.description_8"%>
+          <br><%= t "hopen_box.description_9"%></p>
         </div>
 
         <div class="element">
