--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hopen Family</title>
+    <title>Hopen Family : Your grandparents closer more than ever.</title>
+    <meta name="copyright" content="Hopen Family is a registred trademark of Hopen Project, INC." />
+    <meta name="description" content= "The first App where family share instantly with the grandparents" />
+    <meta name="keywords" content= "grandparents loneliness, family moments, iot, silver economy, content sharing" />
+    <meta name="robots" content="index,follow" />
+    <meta title="Share every moment with your grandparents" />
     <%= csrf_meta_tags %>
     <meta property="og:url"                content="http://www.hopen.family" />
     <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
-    <meta property="og:description"        content="How much does culture influence creative thinking?" />
-    <meta property="og:image"              content="assets/images/hf.jpg" />
+    <meta property="og:title"              content="Hopen Family is coming" />
+    <meta property="og:description"        content="Share every moment with your grandparents" />
+    <meta property="og:image"              content="assets/images/facebook.jpg" />
     <meta property="og:locale"             content ="en_US"/>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <!-- Custom Fonts -->
@@ -16,11 +21,13 @@
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link href="http://ufonts.com/fonts/cupid-de-locke.html" rel="stylesheet">
     <%= favicon_link_tag 'favicon.ico' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script type="text/javascript"></script>
+    
   </head>
 
   <body>
