Add new style from pages_contest version2

--- a/app/views/pages/contest.html.erb
+++ b/app/views/pages/contest.html.erb
@@ -9,7 +9,7 @@
   <br><%= t('contest.title_under2')%>
   <br><%= t('contest.title_under3')%></p>
 
-    <%=image_tag "family_slide", class: "picture_contest" %>
+    <%=image_tag "family_slide.jpg", class: "picture_contest" %>
   <h1 class="title_contest"><span class="icon-coeur_full3"></span><%= t('contest.title2') %></h1>
   <p class='text_contest'><%= t('contest.title2_under')%>
     <p class='text_under_contest'><%= t('contest.dead_line')%></p>
