--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -170,13 +170,13 @@
               <ul class="list-inline list-social">
                   <li>
                     <!--80X80-->
-                    <%= image_tag "face.png", class:"fa fa-twitter" %>
+                    <a href="http://www.facebook.com/hopenfamily"><%=image_tag "face.png", class:"fa fa-twitter" %></a>
                   </li>
                   <li>
-                      <%= image_tag "twitter.png", class:"fa fa-twitter" %>
+                    <a href="http://www.facebook.com/hopenfamily"><%= image_tag "twitter.png", class:"fa fa-twitter" %></a>
                   </li>
                   <li>
-                      <%= image_tag "linkedin.png", class:"fa fa-twitter" %>
+                    <a href="http://www.facebook.com/hopenfamily"><%= image_tag "linkedin.png", class:"fa fa-twitter" %></a>
                   </li>
               </ul>
             </div>
