--- a/app/views/pages/mention.html.erb
+++ b/app/views/pages/mention.html.erb
@@ -2,6 +2,7 @@
 <div class="content_mention">
   <%= link_to (image_tag"off2.png"), root_path, class: "back_log" %>
   <h1><%= t('mention.title') %></h1>
+  <p><%=t('mention.title_under')%></p>
   <h2 class='title_mention'><%= t('mention.title_1') %></h2>
   <p><%= t('mention.description_1') %><br>
     <%= t('mention.description_2') %>
@@ -9,11 +10,14 @@
   <h2 class='title_mention'><%= t('mention.title_2') %></h2>
   <p><%= t('mention.description_3') %></p>
   <h2 class='title_mention'><%= t('mention.title_3') %></h2>
-  <p><%= t('mention.description_4') %>
+  <p><%= t('mention.description_4') %></p>
   <h2 class='title_mention'><%= t('mention.title_4') %></h2>
-  <p><%= t('mention.description_5') %></p>
-  <h2 class='title_mention'><%= t('mention.title_5') %></h2>
-  <p><%= t('mention.description_6') %><br><%= t('mention.description_7')%></p>
+  <p><%=t('mention.title_under4')%></p>
+  <p><%= t('mention.description_5')%></p>
+  <p><%= t('mention.title_under5')%></p>
+  <p><%= t('mention.description_under5')%></p>
+  <p><%= t('mention.title_under6')%></p>
+  <p><%= t('mention.description_6')%></p>
   <h2 class='title_mention'><%= t('mention.title_6') %></h2>
   <p><%= t('mention.description_8') %></p>
   <h2 class='title_mention'><%= t('mention.title_7') %></h2>
