--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -173,10 +173,10 @@
                     <a href="http://www.facebook.com/hopenfamily"><%=image_tag "face.png", class:"fa fa-twitter" %></a>
                   </li>
                   <li>
-                    <a href="http://www.facebook.com/hopenfamily"><%= image_tag "twitter.png", class:"fa fa-twitter" %></a>
+                    <a href="http://www.twitter.com/hopenfamily"><%= image_tag "twitter.png", class:"fa fa-twitter" %></a>
                   </li>
                   <li>
-                    <a href="http://www.facebook.com/hopenfamily"><%= image_tag "linkedin.png", class:"fa fa-twitter" %></a>
+                    <a href="https://www.linkedin.com/company/10961199?trk=tyah&trkInfo=clickedVertical%3Ashowcase%2CclickedEntityId%3A10961199%2Cidx%3A2-1-2%2CtarId%3A1477407439534%2Ctas%3Ahopen%20family"><%= image_tag "linkedin.png", class:"fa fa-twitter" %></a>
                   </li>
               </ul>
             </div>
