--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -156,6 +156,11 @@
     </div>
     </section>
 
+    <!-- <section id="Conteur">
+      <h1>Do you like this product: <span class="nmr"> <%= @first_counter.number %> </span> <span class="bouton_plus">+1</span><h1>
+
+    </section> -->
+
     <section class="section_contact" id="contact" class="contact bg-primary">
         <div class="container">
           <div class="principal_contact">
@@ -200,4 +205,5 @@
             <p>&copy; <%= t "footer.copy" %></p>
         </div>
     </footer>
+
 </body>
