--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
                 <% end %>
                 <!-- <li><%= link_to "Coming Soon", pages_contest_path, class:"page-scroll" %></li> -->
                 <li><%= link_to t('pages.home.header.navbar.sign_out'), destroy_user_session_path, method: :delete, class:"page-scroll" %></li>
-                  <% if current_user.email == "flo@gmail.com" %>
+                  <% if current_user.email == "nelly@gmail.com" %>
                     <li><%= link_to 'Database', users_path %> </li>
                   <% end %>
                 <% else %>
