fix facebook connect

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -48,7 +48,7 @@
       <div class="block1">
         <div class="min_block">
           <%= f.label t('edit.avatar'),class:"title_edit" %>
-          <%= f.file_field :avatar %>
+          <%= f.file_field :photo %>
         </div>
         <div class="min_block">
         <%= f.label t('edit.current_password'),class:"title_edit" %><br /> <i>(<%= t"edit.under_current_password" %>)</i><br />
