--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
       <%= f.label t('sign_up.avatar') %>
       </br>
       </br>
-      <%= f.file_field :avatar %>
+      <%= f.file_field :photo %>
       </div>
       <div class="mat-in_edit">
       <div class="rules"><%= t'sign_up.rules'%></div>
