--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,7 +48,7 @@
       <%= f.submit t('sign_up.title'), class:"log" %>
       <div class='log2'><%= t"sign_up.log1"%> <%= link_to t('link.sign_in'), new_session_path(resource_name), class: "link_log" %></div>
       <% end %>
-      <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+      <%= link_to image_tag("fb.png"), user_facebook_omniauth_authorize_path %>
       </div>
 </div>
   <div class="bg-boxes">
