fix photo for facebook connect V2

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,14 +15,41 @@
             <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
                   <%= link_to edit_user_registration_path do %>
-                    <% avatar_url = current_user.facebook_picture_url || current_user.avatar %>
+                    <% avatar_url = current_user.facebook_picture_url || current_user.photo %>
                     <%= image_tag current_user.avatar.url(:medium), class: " page-scroll img_avatar" %>
+                  <% end %>
+                  <li>
+                    <a class="page-scroll" href="#features"><%= t "pages.home.header.navbar.feature" %></a>
+                  </li>
+                  <% if I18n.locale == :fr %>
+                    <li>
+                      <a class="page-scroll" href="http://hopenproject.com/fr/actualites/" target="_blank"><%= t "pages.home.header.navbar.download1" %></a>
+                    </li>
+                  <% end %>
+                  <% if I18n.locale == :en %>
+                    <li>
+                      <a class="page-scroll" href="http://hopenproject.com/news/" target="_blank"><%= t "pages.home.header.navbar.download1" %></a>
+                    </li>
+                  <% end %>
+                  <li>
+                    <a class="page-scroll" href="#hopen_box"><%= t "pages.home.header.navbar.hopen_box" %></a>
+                  </li>
+                  <% if I18n.locale == :fr %>
+                    <li>
+                      <a class="page-scroll" href="http://hopenproject.com/fr/temoignages-hopen-family/" target="_blank"><%= t "pages.home.header.navbar.support_us" %></a>
+                    </li>
+                  <% end %>
+                  <% if I18n.locale == :en %>
+                    <li>
+                      <a class="page-scroll" href="http://hopenproject.com/hopen-family-testimonials/" target="_blank"><%= t "pages.home.header.navbar.support_us" %></a>
+                    </li>
                   <% end %>
                   <!-- <li><%= link_to "Coming Soon", pages_contest_path, class:"page-scroll" %></li> -->
                   <li><%= link_to t('pages.home.header.navbar.sign_out'), destroy_user_session_path, method: :delete, class:"page-scroll" %></li>
                   <% if current_user.email == "nelly@gmail.com" %>
                     <li><%= link_to 'Database', users_path %> </li>
                   <% end %>
+
                 <% else %>
                   <li>
                     <a class="page-scroll" href="#features"><%= t "pages.home.header.navbar.feature" %></a>
