Add pluging Like facebook

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -179,6 +179,7 @@
                     <a href="https://www.linkedin.com/company/10961199?trk=tyah&trkInfo=clickedVertical%3Ashowcase%2CclickedEntityId%3A10961199%2Cidx%3A2-1-2%2CtarId%3A1477407439534%2Ctas%3Ahopen%20family"><%= image_tag "linkedin.png", class:"fa fa-twitter" %></a>
                   </li>
               </ul>
+              <div class="fb-like" data-href="https://www.facebook.com/hopenfamily/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
             </div>
           </div>
         </div>
@@ -200,5 +201,12 @@
             <p>&copy; <%= t "footer.copy" %></p>
         </div>
     </footer>
-
+    <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.8&appId=259735514468714";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 </body>
