--- a/app/assets/stylesheets/contest.scss
+++ b/app/assets/stylesheets/contest.scss
@@ -88,6 +88,8 @@
       .img_cup{
         margin-top: 10px;
         margin-bottom: -40px;
+        max-width: 100px;
+        padding-left: 5px
       }
 
       .text_link_Facebook{
