--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,3 @@
-<body id="page-top">
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -6,7 +5,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="page-scroll navbar-header" href="#page-top"><span class="icon-coeur_full"></span></a>
+            <a class="page-scroll navbar-header" href="#concept"><span class="icon-coeur_full"></span></a>
             <!-- <a class="navbar-brand page-scroll title_logo" href="#page-top"></a> -->
         </div>
 
@@ -14,13 +13,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <% if user_signed_in? %>
-                  <%= link_to edit_user_registration_path do %>
+                  <!-- <%= link_to edit_user_registration_path do %>
                     <% avatar_url = current_user.facebook_picture_url || current_user.photo %>
                     <%= image_tag current_user.avatar.url(:medium), class: " page-scroll img_avatar" %>
-                  <% end %>
-                  <li>
-                    <a class="page-scroll" href="#features"><%= t "pages.home.header.navbar.feature" %></a>
-                  </li>
+                  <% end %> -->
+
                   <% if I18n.locale == :fr %>
                     <li>
                       <a class="page-scroll" href="http://hopenproject.com/fr/actualites/" target="_blank"><%= t "pages.home.header.navbar.download1" %></a>
@@ -31,9 +28,6 @@
                       <a class="page-scroll" href="http://hopenproject.com/news/" target="_blank"><%= t "pages.home.header.navbar.download1" %></a>
                     </li>
                   <% end %>
-                  <li>
-                    <a class="page-scroll" href="#hopen_box"><%= t "pages.home.header.navbar.hopen_box" %></a>
-                  </li>
                   <% if I18n.locale == :fr %>
                     <li>
                       <a class="page-scroll" href="http://hopenproject.com/fr/temoignages-hopen-family/" target="_blank"><%= t "pages.home.header.navbar.support_us" %></a>
@@ -52,7 +46,10 @@
 
                 <% else %>
                   <li>
-                    <a class="page-scroll" href="#features"><%= t "pages.home.header.navbar.feature" %></a>
+                    <a class="page-scroll" href="#concept"><%= t "pages.home.header.navbar.feature" %></a>
+                  </li>
+                  <li>
+                    <a class="page-scroll" href="#hopen_box"><%= t "pages.home.header.navbar.hopen_box" %></a>
                   </li>
                   <% if I18n.locale == :fr %>
                     <li>
@@ -64,9 +61,6 @@
                       <a class="page-scroll" href="http://hopenproject.com/news/" target="_blank"><%= t "pages.home.header.navbar.download1" %></a>
                     </li>
                   <% end %>
-                  <li>
-                    <a class="page-scroll" href="#hopen_box"><%= t "pages.home.header.navbar.hopen_box" %></a>
-                  </li>
                   <% if I18n.locale == :fr %>
                     <li>
                       <a class="page-scroll" href="http://hopenproject.com/fr/temoignages-hopen-family/" target="_blank"><%= t "pages.home.header.navbar.support_us" %></a>
@@ -93,4 +87,3 @@
     <!-- /.container-fluid -->
     <%= render 'layouts/alerts' %>
 </nav>
-</div>
