add new picture for banner-home

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -31,7 +31,9 @@
 .banner-home h2{
   color: #fff;
 }
-
+.banner-home img {
+  width: 50%;
+}
 .banner-home hr {
     display: block;
     height: 1px;
