Add column name for facebook database

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <%= render partial: 'layouts/navbar' %>
-<div class="banner-home " style="background-image: url('<%= image_path 'hopenfamily.png' %>');">
+<div id="home" class="banner-home " style="background-image: url('<%= image_path 'hopenfamily.png' %>');">
   <div class="banner-content">
     <h1>Hopen Family</h1>
     <hr class="text-center">
