--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="page-scroll navbar-header" href="#concept"><span class="icon-coeur_full"></span></a>
+            <a class="page-scroll navbar-header" href="#home"><span class="icon-coeur_full"></span></a>
             <!-- <a class="navbar-brand page-scroll title_logo" href="#page-top"></a> -->
         </div>
 
