--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @users.each do |user| %>
     <tr>
-      <td><%= user.firstname %> <%= user.lastname %></td>
+      <td><%= user.firstname %> <%= user.lastname %> || <%= user.last_name %> <%= user.first_name %></td>
       <td><%= user.email %></td>
     </tr>
     <% end %>
